# AnchorPoint

./: .env.example  CONTRIBUTING.md  README.md  docker-compose.testnet.yml  docker-compose.yml  package-lock.json  prometheus.yml
.github/: dependabot.yml
.github/workflows/: backend.yml  dashboard.yml  rust.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  package.json
backend/docs/: FUTURENET_CONFIGURATION.md  MULTISIG_SETUP.md  REDIS_CHALLENGES.md  RELAYER_GASLESS_ONBOARDING.md
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/config/: env.ts  queue.ts
backend/src/lib/: key-management.service.ts  key-management.types.ts  prisma.test.ts  redis.ts
backend/src/services/: advanced-cache.service.test.ts  auth.service.ts  batch-payment.examples.ts  batch-payment.service.test.ts  batch-payment.service.ts  config.service.ts  contract-queue.service.ts  event-indexer.service.ts  horizonEventMonitor.ts  multisig.service.ts  price-aggregation.service.ts  recurring-payments.service.ts  relayer.service.ts  sep31.service.ts  sequence-number.service.ts  stellar.service.ts  storage-provider.service.ts  upload-store.service.ts  webhook.service.ts
backend/src/test/: cross-border-payment-flow-e2e.test.ts  e2e.test.ts  sep31.test.ts  withdrawal-flow-testnet.test.ts
backend/src/utils/: sep10-stellar.ts  stellar-address.test.ts  stellar-address.ts
backend/src/workers/: contract-queue.worker.ts
contracts/: Cargo.toml
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/governance/src/tests/: fuzz_tests.rs  mod.rs  state_machine_tests.rs  storage_verification.rs
contracts/registry/src/: lib.rs
contracts/swap/src/: lib.rs
contracts/xlm_wrapper/src/: lib.rs
dashboard/: .eslintrc.cjs  package.json  playwright.config.ts  tsconfig.json
dashboard/docs/: CROSS_BROWSER_QA.md  WEBHOOK_NOTIFICATIONS.md
dashboard/src/: App.tsx
dashboard/src/components/: AdminControls.tsx  CopyablePublicKey.test.tsx  CopyablePublicKey.tsx  InteractiveWebview.tsx  NotificationBell.tsx  NotificationCenter.tsx  NotificationPreferences.tsx  SEP24Flow.tsx  TransactionHistory.tsx
dashboard/src/stories/: NotificationBell.stories.tsx  NotificationCenter.stories.tsx  NotificationPreferences.stories.tsx
docs/: TRACING_README.md  UPGRADEABLE_PATTERN_GUIDE.md  WITHDRAWAL_FLOW_TESTNET_QA.md  security-audit.md  testing-governance.md
docs/security/: trufflehog-audit-2026-05-31.md
docs/sep12-large-file-uploads/: README.md
infra/monitoring/: README.md  alertmanager.yml  blackbox.yml  prometheus-alerts.yml
scripts/: security-audit.sh
src/amm/: Cargo.toml  lib.rs
src/auth/: Cargo.toml
src/batch/: Cargo.toml
src/benchmarks/: Cargo.toml
src/circuit_breaker/: Cargo.toml
src/escrow_multisig/: Cargo.toml
src/escrow_timelock/: Cargo.toml
src/event_hub/: lib.rs
src/flash_loan/: Cargo.toml  verification.rs
src/governance/: Cargo.toml
src/indexing/: Cargo.toml
src/oracle_consumer/: Cargo.toml
src/oracle_medianizer/: Cargo.toml
src/proxy/: Cargo.toml
src/random/: Cargo.toml
src/staking/: Cargo.toml
src/token/: Cargo.toml
src/upgradeable/: Cargo.toml
src/utils/: Cargo.toml  events.rs
src/vesting/: Cargo.toml
src/yield_farming/: Cargo.toml
(+24 files in other folders)
