[workspace]
members = [
    "yield", "nft_metadata", "liquid_staking", "xlm_wrapper", 
    "registry", "swap", "staking", "random_gen", "bridge_stub", 
    "revenue_distributor", "anchorpoint", "governance"
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
soroban-sdk = "22.0.0"