[package]
name = "flash-loan-provider"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
doctest = false

[dependencies]
soroban-sdk = "26.0.1"

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
