[package]
name = "anchorpoint-oracle-medianizer"
version = "0.1.0"
edition = "2021"
description = "Oracle medianizer with outlier detection for robust price aggregation"

[dependencies]
soroban-sdk = "26.0.1"

[lib]
name = "anchorpoint_oracle_medianizer"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
