[package]
name = "anchorpoint-utils"
version = "0.1.0"
edition = "2021"
description = "Shared utilities for AnchorPoint: events and dynamic fee calculation"

[dependencies]
soroban-sdk = "26.0.1"

[lib]
name = "anchorpoint_utils"
path = "lib.rs"
crate-type = ["rlib"]
doctest = false

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
